fix: set passWithNoTests correctly

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -29,7 +29,7 @@ jobs:
         run: pnpm format:check
 
       - name: Test 🧪
-        run: pnpm test --passWithNoTests
+        run: pnpm test -- --passWithNoTests
 
       - name: Build 🔨
         run: pnpm build
