--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "tsx watch src/main.ts",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "eslint . --ext .ts,.tsx",
+    "test": "vitest run"
   },
   "dependencies": {
     "date-fns": "^2.30.0",
