--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:ui": "TZ=UTC vitest --ui"
   },
   "dependencies": {
+    "camelcase-keys": "^8.0.2",
     "date-fns": "^2.30.0",
     "exponential-backoff": "^3.1.1",
     "ts-invariant": "^0.10.3",
@@ -35,6 +36,7 @@
     "@types/node": "^18",
     "eslint": "^8.45.0",
     "tsx": "^3.12.7",
+    "type-fest": "^3.12.0",
     "typescript": "^5.1.3",
     "undici": "^5.22.1",
     "vitest": "^0.33.0"
