--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint . --ext .ts,.tsx",
-    "test": "vitest run"
+    "test": "TZ=UTC vitest"
   },
   "dependencies": {
     "date-fns": "^2.30.0",
@@ -32,6 +32,7 @@
     "eslint": "^8.43.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3",
+    "undici": "^5.22.1",
     "vitest": "^0.32.2"
   },
   "keywords": [
