test: add equipment tests (#14)
Co-authored-by: Simen A. W. Olsen <so@bjerk.io>

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint . --ext .ts,.tsx",
-    "test": "TZ=UTC vitest"
+    "test": "vitest **/*.test.ts",
+    "test:all": "TZ=UTC vitest",
+    "test:e2e": "TZ=UTC vitest **/*.spec.ts",
+    "test:ui": "TZ=UTC vitest --ui"
   },
   "dependencies": {
     "date-fns": "^2.30.0",
@@ -29,6 +32,7 @@
     "@tsconfig/node-lts": "^18.12.2",
     "@tsconfig/strictest": "^2.0.1",
     "@types/node": "^18",
+    "dotenv": "^16.3.1",
     "eslint": "^8.43.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3",
