--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "date-fns": "^2.30.0",
     "exponential-backoff": "^3.1.1",
+    "ts-invariant": "^0.10.3",
     "typical-fetch": "^2.0.0",
     "zod": "^3.21.4"
   },
